Tree Game Image

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ section#portfolio .html-css-js .project .site-links button:hover {
 }
 
 #project-8 {
-    background: url(images/);
+    background: url(images/Tree\ Guessing\ Game.png);
 }
 
 #project-9 {
