--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ main {
 
 section#home {
     height: 46rem;
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("computerbg.webp");
+    background: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(images/computer.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
