--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ main {
     width: 100%;
 }
 
+scroll-container {
+    scroll-behavior: smooth;
+}
+
 .overlay {
     width: 100%;
     height: 100%;
