Added links and image

--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ section#portfolio .html-css-js .project .site-links button:hover {
 }
 
 #project-1 {
-    background: url(images/Rocks.png);
+    background: url(images/Chocolate\ Website.png);
 }
 
 #project-2 {
