styles of new projects

--- a/style.css
+++ b/style.css
@@ -262,6 +262,54 @@ section#portfolio .html-css-js .project .site-links button:hover {
     background: url(images/Camp\ Life.png)
 }
 
+#project-4 {
+    background: url(images/Save\ Bees.png);
+}
+
+#project-5 {
+    background: url(images/Wave\ Riders.png);
+}
+
+#project-6 {
+    background: url(images/Violin.png)
+}
+
+#project-7 {
+    background: url(images/FruitApples.png);
+}
+
+#project-8 {
+    background: url(images/Pears.png);
+}
+
+#project-9 {
+    background: url(images/Oranges.png);
+}
+
+#project-10 {
+    background: url(images/Cat\ Dog\ Quiz.png);
+}
+
+#project-11 {
+    background: url(images/Converter.png);
+}
+
+#project-12 {
+    background: url(images/Fortunes.png);
+}
+
+#project-13 {
+    background: url(images/Lamplight.png);
+}
+
+#project-14 {
+    background: url(images/Magic\ Eight\ Ball.png);
+}
+
+#project-15 {
+    background: url(images/Clock.png);
+}
+
 #project-16 {
     background: url(images/Calculator.png);
 }
