--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ section#portfolio .html-css-js .project {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top ;
+    background-color: #333;
     padding-bottom: 5rem;
     font-size: 1.2rem;
     position: relative;
