--- a/style.css
+++ b/style.css
@@ -267,10 +267,10 @@ section#portfolio .html-css-js .project .site-links button:hover {
 #project-4 {
     background: url(images/Save\ Bees.png);
 }
-/*
+
 #project-5 {
     background: url(images/Wave\ Riders.png);
-}*/
+}
 
 #project-6 {
     background: url(images/Violin.png)
