--- a/style.css
+++ b/style.css
@@ -75,11 +75,23 @@ nav .logo-side span {
     font-size: 0.5rem;
 }
 
-nav h1 {
-    color: black;
-    font-size: 3rem;
-    text-transform: uppercase;
-    margin: 0 1rem;
+.burger {
+    width: 2.5rem;
+    height: 2.5rem;
+    outline: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    cursor: pointer;
+    display: none;
+}
+
+.burger div {
+    width: 100%;
+    height: 0.2rem;
+    background: white;
+    border: 1px solid white;
 }
 
 nav ul {
@@ -89,13 +101,32 @@ nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    outline: 1px solid red;
+    background: none;
+    position: static;
+    transform: translateX(0%);
 }
 
-nav ul li {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@keyframes navLinksFadeIn {
+    from {
+        transform: translateX(-200%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes navLinksFadeOut {
+    from {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    to {
+        transform: translateX(-200%);
+        opacity: 0;
+    }
 }
 
 nav ul li a {
@@ -103,7 +134,14 @@ nav ul li a {
     text-decoration: none;
     text-transform: uppercase;
     color: white;
-    transition: color 0.3s ease-out, transform 0.3s ease-out;
+    transition: background 0.2s ease-out, color 0.3s ease-out, transform 0.3s ease-out;
+}
+
+nav ul li {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav ul li a:hover {
@@ -573,5 +611,55 @@ footer .very-bottom {
         grid-template-columns: repeat(1, 390px);
         grid-template-rows: repeat(24, 225px);
         grid-gap: 2rem;
+    }
+
+    .burger {
+        display: flex;
+    }
+    
+    nav ul {
+        width: 100%;
+        height: 9rem;
+        flex-direction: column;
+        justify-content: center;
+        box-sizing: border-box;
+        position: absolute;
+        top: 5rem;
+        left: 0;
+        transform: translateX(-200%);
+    }
+
+    nav ul li {
+        width: 100%;
+        height: 3rem;
+        background: lightgray;
+        border-bottom: 1px solid white;
+        justify-content: flex-start;
+        padding: 0 1rem;
+        cursor: pointer;
+        transition: background 0.5s ease, color 0.5s ease;
+        position: relative;
+    }
+
+    nav ul li:nth-of-type(3) {
+        border: none;
+    }
+
+    nav ul li:hover {
+        background: skyblue;
+        color: black;
+    }
+
+    nav ul li a {
+        width: 100%;
+        height: 100%;
+        padding: 0 1rem;
+        display: flex;
+        align-items: center;
+    }
+
+    nav ul li a:hover {
+        color: black;
+        transform: none;
     }
 }
