--- a/style.css
+++ b/style.css
@@ -234,15 +234,17 @@ nav {
     z-index: 11;
     top: 0;
     left: 0;
-    background: rgba(17,17,17,0.5);
 }
-
+.project h3 {
+    background: rgba(17,17,17,0.9);
+}
 .project hr {
     width: 80%;
     height: 1px;
     background: white;
     margin: 0 auto;
     border: none;
+    display: none;
 }
 
 .project a {
@@ -261,15 +263,16 @@ nav {
 
 .project a:nth-of-type(1) {
     left: 0;
-    right: 0;
-    bottom: calc(24.6px);
+    bottom: 0;
+    border: 0.2rem solid #111;
+    border-right: 0.1rem solid #111;
 }
 
 .project a:nth-of-type(2) {
-    left: 0;
     right: 0;
     bottom: 0;
-    border-top: 0.2rem solid #111;
+    border: 0.2rem solid #111;
+    border-left: 0.1rem solid #111;
 }
 
 .project a:hover {
